--- a/AI/utils/notebooks/lstm.ipynb
+++ b/AI/utils/notebooks/lstm.ipynb
@@ -607,7 +607,7 @@
     "            key, val = part.split(\":\", 1)\n",
     "            key = key.strip()\n",
     "            val = val.strip()\n",
-    "            new_key = tr_to_en.get(key, key)  # Çeviri yoksa orijinal key\n",
+    "            new_key = tr_to_en.get(key, key)\n",
     "            new_parts.append(f\"{new_key}: {val}\")\n",
     "        else:\n",
     "            new_parts.append(part.strip())\n",
@@ -658,7 +658,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(r\"C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\notebooks\\currencyRates.csv\")  # openpyxl yüklü olmalı\n",
+    "df = pd.read_csv(r\"C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\notebooks\\currencyRates.csv\") \n",
     "\n",
     "df['RecordDate'] = pd.to_datetime(df['RecordDate'], dayfirst=True, errors='coerce')\n",
     "\n",
